<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/style_widthM_heightM">
    <include layout="@layout/top_layout_login"/>
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="60px"
        style="@style/style_widthM_heightW">
        <TextView
            android:layout_marginTop="60px"
            android:text="@string/set_password"
            android:textSize="@dimen/input_tv_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_marginTop="50px"
            android:layout_width="@dimen/Spacing_300dp"
            android:layout_height="80px">
            <EditText
                android:id="@+id/et_input_new_pd"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                style="@style/style_widthM_heightM"
                android:textSize="@dimen/input_tv_size"
                android:textColorHint="@color/login_tvColorHint"
                android:hint="@string/input_new_password" />
            <ImageView
                android:id="@+id/iv_see_password"
                android:layout_marginRight="@dimen/Spacing_5dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/register_watched_nor"
                style="@style/style_widthW_heightW"/>
        </RelativeLayout>
        <include layout="@layout/edit_bottom_line"/>

        <TextView
            android:layout_marginTop="60px"
            android:text="密码 支付6~20字符,建议字母数字组合 "
            android:textSize="@dimen/top_layout_tv_size"
            android:textColor="@color/tab_tvColor_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_sure"
            android:gravity="center"
            android:background="@drawable/shape_getcode_bg"
            android:text="@string/sure"
            android:textSize="@dimen/input_tv_size"
            android:textColor="@color/white"
            android:layout_marginTop="110px"
            android:layout_width="300dp"
            android:layout_height="80px" />
    </LinearLayout>
</LinearLayout>