<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              style="@style/style_widthM_heightM">
    <include layout="@layout/top_layout_login"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        style="@style/style_widthM_heightW">
        <TextView
            android:layout_marginTop="80px"
            android:text="@string/send_code_finish"
            android:textSize="@dimen/top_layout_tv_size"
            android:textColor="@color/edit_tvColorHint"
            style="@style/style_widthW_heightW"/>
        <TextView
            android:id="@+id/tv_phoneNumber"
            android:layout_marginTop="40px"
            android:text="150****2545"
            android:textSize="@dimen/input_tv_size"
            android:textColor="@color/black"
            style="@style/style_widthW_heightW"/>
        <RelativeLayout
            android:layout_marginTop="50px"
            android:layout_width="@dimen/Spacing_300dp"
            android:layout_height="80px">
            <EditText
                android:id="@+id/et_input_code"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                style="@style/style_widthM_heightM"
                android:textSize="@dimen/input_tv_size"
                android:textColorHint="@color/login_tvColorHint"
                android:hint="@string/input_code" />
            <com.xianrou.mohu.widget.CodeButton
                android:id="@+id/btn_getCode"
                android:text="获取验证码"
                android:textSize="@dimen/fontSize_12sp"
                android:padding="@dimen/Spacing_5dp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/style_widthW_heightW"
                android:background="@drawable/btn_getcode"/>
        </RelativeLayout>
        <include layout="@layout/edit_bottom_line"/>

        <Button
            android:id="@+id/btn_sure"
            android:gravity="center"
            android:background="@drawable/shape_getcode_bg"
            android:text="@string/sure"
            android:textSize="@dimen/input_tv_size"
            android:textColor="@color/white"
            android:layout_marginTop="108px"
            android:layout_width="300dp"
            android:layout_height="80px" />
    </LinearLayout>
</LinearLayout>