<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fresco="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/ll_root"
              android:gravity="center_horizontal"
              style="@style/style_widthM_heightM">
    <include layout="@layout/top_layout_login"/>

    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="280px">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/user_avatar"
            android:layout_gravity="center"
            android:layout_height="154px"
            android:layout_width="154px"
            fresco:roundAsCircle="true"
            fresco:placeholderImage="@drawable/registered_logo_nor"
            fresco:actualImageScaleType="focusCrop"
            fresco:failureImage="@drawable/registered_logo_nor"/>
        <TextView
            android:layout_below="@id/user_avatar"
            android:layout_marginTop="30px"
            android:text="上传头像"
            android:textSize="@dimen/top_layout_tv_size"
            android:textColor="@color/tab_tvColor_normal"
            android:gravity="center_horizontal"
            android:layout_width="154px"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/Spacing_300dp"
        android:layout_height="80px">
        <EditText
            android:id="@+id/et_input_account"
            android:background="@null"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/style_widthM_heightM"
            android:textSize="@dimen/input_tv_size"
            android:textColorHint="@color/login_tvColorHint"
            android:hint="@string/input_account" />
        <ImageView
            android:id="@+id/iv_see_more_account"
            android:layout_marginRight="@dimen/Spacing_5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/register_unfold_nor"
            style="@style/style_widthW_heightW"/>
    </RelativeLayout>
    <include layout="@layout/edit_bottom_line"/>

    <RelativeLayout
        android:layout_marginTop="20px"
        android:layout_width="@dimen/Spacing_300dp"
        android:layout_height="80px">
        <EditText
            android:id="@+id/et_input_password"
            android:background="@null"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/style_widthM_heightM"
            android:textSize="@dimen/input_tv_size"
            android:textColorHint="@color/login_tvColorHint"
            android:hint="@string/input_password" />
        <ImageView
            android:id="@+id/iv_see_password"
            android:layout_marginRight="@dimen/Spacing_5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/register_watched_nor"
            style="@style/style_widthW_heightW"/>
    </RelativeLayout>
    <include layout="@layout/edit_bottom_line"/>

    <RelativeLayout
        android:layout_marginTop="20px"
        android:layout_width="@dimen/Spacing_300dp"
        android:layout_height="80px">
        <EditText
            android:id="@+id/et_input_password_again"
            android:background="@null"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/style_widthM_heightM"
            android:textSize="@dimen/input_tv_size"
            android:textColorHint="@color/login_tvColorHint"
            android:hint="@string/input_password_again" />
        <ImageView
            android:id="@+id/iv_no_see_password"
            android:layout_marginRight="@dimen/Spacing_5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/register_unwatched_nor"
            style="@style/style_widthW_heightW"/>
    </RelativeLayout>
    <include layout="@layout/edit_bottom_line"/>

    <RelativeLayout
        android:layout_marginTop="20px"
        android:layout_width="@dimen/Spacing_300dp"
        android:layout_height="80px">
        <EditText
            android:id="@+id/et_input_code"
            android:background="@null"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/style_widthM_heightM"
            android:textSize="@dimen/input_tv_size"
            android:textColorHint="@color/login_tvColorHint"
            android:hint="@string/input_password_again" />
        <ImageView
            android:id="@+id/iv_code"
            android:layout_marginRight="@dimen/Spacing_5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/register_unwatched_nor"
            style="@style/style_widthW_heightW"/>
    </RelativeLayout>
    <include layout="@layout/edit_bottom_line"/>
    <Button
        android:id="@+id/btn_sure_Login"
        android:gravity="center"
        android:background="@drawable/shape_getcode_bg"
        android:text="@string/sure_register"
        android:textSize="@dimen/input_tv_size"
        android:textColor="@color/white"
        android:layout_marginTop="72px"
        android:layout_width="300dp"
        android:layout_height="80px" />

</LinearLayout>